--- a/flaskdeadline/templates/staff_mod.html
+++ b/flaskdeadline/templates/staff_mod.html
@@ -106,6 +106,19 @@
                         {% endif %}
                         
                     </div>
+                    <div class="form-group mb-4">
+                        {{ form.content.label(class="form-control-label") }}
+                        {% if form.content.errors %}
+                            {{ form.content(class="form-control form-control-lg is-invalid") }}
+                            <div class="invalid-feedback">
+                                {% for error in form.content.errors %}
+                                    <span>{{ error }}</span>
+                                {% endfor %}
+                            </div>
+                        {% else %}
+                            {{ form.content(class="form-control form-control-lg") }}
+                        {% endif %}
+                    </div>
                 </fieldset>
                 <div class="form-group mb-4">
                     {{ form.submit(class="btn btn-outline-info") }}
